[project]
name = "lerobot_policy_act_ttt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["lerobot>=0.4.2"]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot.git", rev = "17c5a0774faf2ed956315bb225daa8791f650a96" }
